rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__word__tests__word_lower.snap
---
source: src/lexis/word.rs
expression: w
---
Word {
    place: (
        0,
        15,
    ),
    stem: 15,
    pos: None,
    fin: true,
}
