rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__word__tests__word_split.snap
---
source: src/lexis/word.rs
expression: s
---
[
    Word { "Foo" },
    Word { "Bar" },
    Word { "Baz" },
]
