rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__word__tests__word_strip.snap
---
source: src/lexis/word.rs
expression: "&w"
---
Word {
    place: (
        1,
        4,
    ),
    stem: 6,
    pos: None,
    fin: true,
}
