rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__word__tests__word_strip_empty.snap
---
source: src/lexis/word.rs
expression: w
---
Word {
    place: (
        3,
        3,
    ),
    stem: 3,
    pos: None,
    fin: true,
}
